--- a/3hipostesis.ipynb
+++ b/3hipostesis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -27,12 +27,13 @@
     "\n",
     "print(df.head())\n",
     "\n",
-    "alturas = df['Altura (cm)']\n"
+    "alturas = df['Altura (cm)']\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +42,7 @@
      "text": [
       "Media calculada: 171.78571428571428\n",
       "Prueba t de una muestra\n",
-      "Estadístico t: 0.0000, Valor p: 1.0000\n"
+      "Estadístico t: -3.0041, Valor p: 0.0102\n"
      ]
     }
    ],
@@ -55,7 +56,7 @@
     "print(f\"Media calculada: {media}\")\n",
     "\n",
     "media_hipotetica = media\n",
-    "t_stat, p_value = stats.ttest_1samp(alturas, media_hipotetica)\n",
+    "t_stat, p_value = stats.ttest_1samp(alturas, 175)\n",
     "print(f\"Prueba t de una muestra\\nEstadístico t: {t_stat:.4f}, Valor p: {p_value:.4f}\")\n"
    ]
   },
