--- a/3hipostesis.ipynb
+++ b/3hipostesis.ipynb
@@ -62,9 +62,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Prueba de varianza (Chi Cuadrada)\n",
+      "Estadístico chi-cuadrado: 2.0836, Valor p: 0.9997\n"
+     ]
+    }
+   ],
    "source": [
     "# Prueba 2: ¿Es la desviación estándar de su estatura igual a o menor que 10 cm? (Prueba de varianza usando Chi cuadrada)\n",
     "std_hipotetica = 10\n",
@@ -77,17 +87,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Prueba t para dos muestras independientes (Hombres vs Mujeres)\n",
+      "Estadístico t: 2.0865, Valor p: 0.0917\n"
+     ]
+    }
+   ],
    "source": [
     "# Prueba 3: ¿Es diferente la estatura promedio de las mujeres comparada con la de los hombres? (Prueba t para dos muestras independientes)\n",
     "# Suponiendo que hay una columna llamada \"Género\" con los valores \"Hombre\" y \"Mujer\"\n",
-    "alturas_hombres = df[df['Género'] == 'Hombre']['Altura']\n",
-    "alturas_mujeres = df[df['Género'] == 'Mujer']['Altura']\n",
+    "alturas_hombres = df[df['Sexo'] == 'M']['Altura (cm)']\n",
+    "alturas_mujeres = df[df['Sexo'] == 'F']['Altura (cm)']\n",
     "\n",
     "t_stat_2samp, p_value_2samp = stats.ttest_ind(alturas_hombres, alturas_mujeres, equal_var=False)\n",
     "print(f\"\\nPrueba t para dos muestras independientes (Hombres vs Mujeres)\\nEstadístico t: {t_stat_2samp:.4f}, Valor p: {p_value_2samp:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hipotesis de 1,2,3\n",
+    "\n",
+    "## 1 la primera prueba que se realizó un prueba T student y se demostró que se rechaza la hipotesis porque esta por debajo del porcentaje de 0.05%\n",
+    "\n",
+    "## 2 la segunda prueba que se realizó un prueba T student y se demostró que se NO se rechaza la hipotesis porque esta por encima del porcentaje de 0.05%\n",
+    "\n",
+    "## 3 la tercera prueba que se realizó un prueba T student y se demostró que se NO se rechaza la hipotesis porque esta por encima del porcentaje de 0.05%"
    ]
   }
  ],
